--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon backend/server.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -24,7 +24,6 @@
     "md5": "^2.3.0",
     "mongodb": "^4.9.0",
     "mongoose": "^6.4.6",
-    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7"
   }
